# solidly

./: README.md  demo.py  pyproject.toml  solidly.md
.github/workflows/: python-package.yml
src/solidly/: __init__.py  core.py  plotting.py  spatial.py
src/solidly.egg-info/: SOURCES.txt  requires.txt
tests/: test_boolean.py  test_core.py  test_io.py  test_plotting.py  test_polygon_clip.py  test_predicates.py  test_primitives.py  test_ray_casting.py  test_spatial.py  test_topo.py  test_transform.py  test_validation.py
