[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "solidly"
version = "0.2.0"
description = "Solidly — a from-scratch, lightweight 3D geometry library for solids and meshes."
authors = [{ name="Nicolas Dunsworth", email="nduns820@gmail.com" }]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
  "numpy>=1.24",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.5"]
